# langchain-redis

./: .gitignore  CLAUDE.md  LICENSE  README.md  TASK_MEMORY.md
.github/: dependabot.yml
.github/actions/poetry_setup/: action.yml
.github/scripts/: check_diff.py  get_min_versions.py
.github/workflows/: _codespell.yml  _compile_integration_test.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  check_diffs.yml  extract_ignored_words_list.py  nightly.yml
libs/redis/: .gitignore  LICENSE  MIGRATION_V1.md  Makefile  README.md  pyproject.toml
libs/redis/docs/: .gitignore  Dockerfile.jupyter  MIGRATION_V1.md  README.md  cache.ipynb  chat_history.ipynb  docker-compose.yml  jupyter_notebook_config.py  kitchensink.ipynb  langchain_v1_migration.md  langgraph_self_rag.ipynb  vectorstores.ipynb
libs/redis/langchain_redis/: __init__.py  cache.py  chat_message_history.py  config.py  vectorstores.py  version.py
libs/redis/tests/: conftest.py  docker-compose.yml
libs/redis/tests/integration_tests/: embed_patch.py  test_cache.py  test_cache_async.py  test_chat_message_history.py  test_compile.py  test_fixed_logging_reset.py  test_ids_parameter.py  test_index_name_collision.py  test_langcache_semantic_cache_integration.py  test_logging_reset.py  test_redis_config.py  test_vectorstores.py  test_vectorstores_hash.py  test_vectorstores_json.py
libs/redis/tests/unit_tests/: test_add_texts_ids.py  test_cache.py  test_chat_message_history.py  test_ids_parameter.py  test_imports.py  test_key_prefix_issue.py  test_key_prefix_issue_78.py  test_langcache_semantic_cache.py  test_semantic_cache_prefix.py  test_sentinel_support.py  test_tool_message_issue_51.py  test_vectorstores.py
