[tool.poetry]
name = "langchain-redis"
version = "0.3.4"
description = "An integration package connecting Redis and LangChain for AI working memory"
authors = ["Brian Sam-Bodden <bsb@redis.com>"]
readme = "README.md"
repository = "https://github.com/langchain-ai/langchain-redis"
license = "MIT"

[tool.poetry.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-redis/tree/main/libs/redis"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
langchain-core = ">=1.0.7"
redisvl = ">=0.11.1,<1.0.0"
jinja2 = "^3.1.6"
typing-extensions = "^4.13.2"
anyio = "^4.9.0"
httpcore = "^1.0.9"
certifi = "^2025.4.26"
urllib3 = "^2.4.0"
python-ulid = ">=3.0.0"
langcache = {version = ">=0.11.0", optional = true}

[tool.poetry.extras]
langcache = ["langcache"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-socket = "^0.7.0"
syrupy = "^4.6.1"
sentence-transformers = "^3.0.1"
langchain-core = "^1.0"
langchain-openai = "^1.0"
openai = ">=1.68.2"
langcache = {version = ">=0.11.0"}
python-dotenv = "^1.0.1"

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.6"

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.test_integration.dependencies]
langchain-openai = "^1.0"
testcontainers = "^4.7.1"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.5.0"

[tool.poetry.group.typing.dependencies]
mypy = "^1.12.0"
langchain-core = "^1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
langchain-core = "^1.0"
langchain-openai = "^1.0"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "T201", # print
]

[tool.mypy]
disallow_untyped_defs = true
exclude = '(^env/|^\.venv/|^venv/)'

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = [
  "compile: mark placeholder test used to compile integration tests without running them",
  "requires_api_keys: mark tests that require external API keys or services",
]
asyncio_mode = "auto"
# Filter out testcontainers internal deprecation warnings
# These come from testcontainers library's own code, not our usage
# We're already using the recommended LogMessageWaitStrategy
filterwarnings = [
  "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers",
]
